Added modules to request location weather info to openWeather's API with an user's input

--- a/src/template.html
+++ b/src/template.html
@@ -26,7 +26,7 @@
                     <input type="text" id="userInput" placeholder="Search Location" class="small">
                     <i class="fa-solid fa-magnifying-glass" id="lupa"></i>
                 </div>
-                <button class="button-85" role="button" id="submit">Search</button>
+                <button type="submit" class="button-85"  id="submit">Search</button>
              </form>
           
          </div>
