--- a/src/template.html
+++ b/src/template.html
@@ -32,28 +32,36 @@
          </div>
          <div id="right">
              <div class="info">
-                 <div id="feelsLikeIcon" class="infoIcon">ico</div>
+                 <div id="feelsLikeIcon" class="infoIcon"><i class="fa-solid fa-face-grin-beam-sweat"></i></div>
                  <div class="infoBox">
                      <div class="small"> Feels Like</div>
-                     <div class="big"> 0C</div>
+                     <div id="feelsLike" class="big"> 0C</div>
                  </div>
              </div>
+
              <div class="info">
-                <div id="humidityIcon" class="infoIcon">ico</div>
+                <div id="minTemp" class="infoIcon">  <i class="fa-solid fa-temperature-arrow-down"></i> </div>
+                <div class="infoBox">
+                    <div class="small">Min temp</div>
+                    <div class="big" id="minTempValue"> 0%</div>
+                </div>
+            </div>
+            <div class="info">
+                <div id="maxTemp" class="infoIcon">   <i class="fa-solid fa-temperature-arrow-up"></i> </div>
+                <div class="infoBox">
+                    <div class="small">Min temp</div>
+                    <div class="big" id="maxTempValue"> 0%</div>
+                </div>
+            </div>
+            <div class="info">
+                <div id="humidityIcon" class="infoIcon"> <i class="fa-solid fa-droplet"></i></div>
                 <div class="infoBox">
                     <div class="small">Humidity</div>
                     <div class="big" id="humidityValue"> 0%</div>
                 </div>
             </div>
             <div class="info">
-                <div id="chanceOfRain" class="infoIcon">ico</div>
-                <div class="infoBox">
-                    <div class="small">Chance Of Rain</div>
-                    <div class="big" id="chanceOfRainValue"> 0%</div>
-                </div>
-            </div>
-            <div class="info">
-                <div id="windSpeed" class="infoIcon">ico</div>
+                <div id="windSpeed" class="infoIcon">  <i class="fa-solid fa-wind"></i></div>
                 <div class="infoBox">
                     <div class="small">Wind Speed</div>
                     <div class="big" id="windSpeedValue"> 0<span class="small">km/h</span></div>
