Added modules to request and display location daily weather forecast

--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
              <div id="date" class="small"> date of fetch</div>
              <div id="currentHour" class="small"> Hour</div>
              <div id="currentTemp" class="big"> CurrentTemp</div>
-             <div id="tempIcon"> tempIcon</div>
+             <div id="tempIcon"></div>
              <form id="search">
                 <div id="inputDiv">
                     <input type="text" id="userInput" placeholder="Search Location" class="small">
@@ -69,7 +69,10 @@
             </div>
          </div>
      </div>
-     <div id="bot"></div>
+     <div id="bot">
+         <div class="small">Daily Forecast</div>
+         <div id="dailyForecast"> </div>
+     </div>
  </div>
 </body>
 </html>
